--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,8 @@ inputs:
     required: true
   delete:
     description: "Delete extraneous files from destination"
+  exclude:
+    description: "Exclude files matching the pattern"
 
 runs:
   using: "docker"
@@ -23,3 +25,4 @@ runs:
     - ${{ inputs.from }}
     - ${{ inputs.to }}
     - ${{ inputs.delete }}
+    - ${{ inputs.exclude }}
